--- a/MoreThanOne.ipynb
+++ b/MoreThanOne.ipynb
@@ -121,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def SGD(X,y,p0, Update, batchsize=64, lr=0.1): # p0 is the point where the algo is initialized (Do we need this?).\n",
+    "def SGD(X,y,p0, Update, epochs, batchsize=64, lr=0.1): # p0 is the point where the algo is initialized (Do we need this?).\n",
     "    \n",
     "    # Implement SGD, with one change. Typically, points/parameters are updated as follows:\n",
     "    # newPoint = oldPoint - eta*grad(f(oldPoint)).\n",
@@ -129,6 +129,7 @@
     "    # newPoint = gradUpdate1(oldPoint)\n",
     "    \n",
     "    gradUpdate = Update # the function that will be used to update the parameters.\n",
+    "    # exception handling?\n",
     "    \n",
     "    # Now we need to implement SGD using this rule for updating the point.\n",
     "    \n",
@@ -224,7 +225,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "980e8920",
    "metadata": {},
@@ -248,6 +248,34 @@
     "plt.title(\"Avocados Sold vs Price\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31020968",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df = pd.read_csv('data/avocado.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09d48f2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edddf497",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -266,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
