Added batch stuff

--- a/MoreThanOne.ipynb
+++ b/MoreThanOne.ipynb
@@ -17,7 +17,8 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import random"
    ]
   },
   {
@@ -121,14 +122,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def SGD(X, y, pt, Update, epochs, batchsize=64, lr=0.01): # p0 is the point where the algo is initialized (Do we need this?).\n",
-    "    # Implement SGD, with one change. Typically, points/parameters are updated as follows:\n",
-    "    # newPoint = oldPoint - eta*grad(f(oldPoint)).\n",
-    "    # Now, the update happens as follows:\n",
-    "    # newPoint = gradUpdate1(oldPoint)\n",
+    "\"\"\"\n",
+    "X - X data points\n",
+    "y - y data points\n",
+    "pt - Initial point to start at\n",
+    "Update - Update function to get a new point\n",
+    "epochs - Number of iterations to narrow down the best point\n",
+    "batchsize - The size of the sliced dataset to use in the update function\n",
+    "lr - The learning rate\n",
+    "\"\"\"\n",
+    "def SGD(X, y, pt, Update, epochs, batchsize=64, lr=0.01):\n",
     "\tpts = [pt]\n",
-    "\tfor i in range(epochs):\n",
-    "\t\tpt = Update(pt,X,y,lr)\n",
+    "\txBatch = X\n",
+    "\tyBatch = y\n",
+    "\tfor _ in range(epochs):\n",
+    "\t\tif len(X) > batchsize:\n",
+    "\t\t\t# We want to get a random list of integers to get a batch\n",
+    "\t\t\txBatch = []\n",
+    "\t\t\tyBatch = []\n",
+    "\t\t\trandList = random.sample(range(0, len(X)), batchsize)\n",
+    "\t\t\tfor index in randList:\n",
+    "\t\t\t\txBatch.append(X[index])\n",
+    "\t\t\t\tyBatch.append(y[index])\n",
+    "\t\t# Call passed in function TODO: Only will work with gradupdate1, need a way to have it work with multiple.\n",
+    "\t\tpt = Update(pt,xBatch,yBatch,lr)\n",
     "\t\tpts.extend([pt]) # Track the path in the original coordinates.\n",
     "\treturn pts"
    ]
@@ -157,7 +174,8 @@
    "outputs": [],
    "source": [
     "Xtest = np.linspace(0,10,100)\n",
-    "ytest = [x+1 for x in Xtest] # So the model is y= 1*x+1."
+    "ytest = [x+1 for x in Xtest] # So the model is y= 1*x+1.\n",
+    "print(len(Xtest))"
    ]
   },
   {
@@ -293,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
