Added some exception stuff

--- a/MoreThanOne.ipynb
+++ b/MoreThanOne.ipynb
@@ -18,7 +18,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import random"
+    "import random\n",
+    "import math"
    ]
   },
   {
@@ -146,17 +147,15 @@
     "\t\t\t\tyBatch.append(y[index])\n",
     "\t\t# Call passed in function TODO: Only will work with gradupdate1, need a way to have it work with multiple.\n",
     "\t\tpt = Update(pt,xBatch,yBatch,lr)\n",
+    "\t\tfor num in pt:\n",
+    "\t\t\tif math.isnan(num):\n",
+    "\t\t\t\tprint(\"Sorry, unable to get an updated point. Please change learning rate and/or starting point.\")\n",
+    "\t\t\t\tlastPoint = pts[len(pts)-1]\n",
+    "\t\t\t\tprint(f\"Returning the last succesful point: {lastPoint}\")\n",
+    "\t\t\t\treturn lastPoint\n",
     "\t\tpts.extend([pt]) # Track the path in the original coordinates.\n",
     "\treturn pts"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89be60c2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -174,8 +173,7 @@
    "outputs": [],
    "source": [
     "Xtest = np.linspace(0,10,100)\n",
-    "ytest = [x+1 for x in Xtest] # So the model is y= 1*x+1.\n",
-    "print(len(Xtest))"
+    "ytest = [x+1 for x in Xtest] # So the model is y= 1*x+1."
    ]
   },
   {
