--- a/MoreThanOne.ipynb
+++ b/MoreThanOne.ipynb
@@ -19,7 +19,9 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import random\n",
-    "import math"
+    "import math\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -150,7 +152,7 @@
     "\t\tfor num in pt:\n",
     "\t\t\tif math.isnan(num):\n",
     "\t\t\t\tprint(\"Sorry, unable to get an updated point. Please change learning rate and/or starting point.\")\n",
-    "\t\t\t\tlastPoint = pts[len(pts)-1]\n",
+    "\t\t\t\tlastPoint = [pts[len(pts)-1]]\n",
     "\t\t\t\tprint(f\"Returning the last succesful point: {lastPoint}\")\n",
     "\t\t\t\treturn lastPoint\n",
     "\t\tpts.extend([pt]) # Track the path in the original coordinates.\n",
@@ -183,17 +185,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "pt = [2,0] # Initialize (new coordinates). This is (exp(2)+1, 0) in the original coordinates.\n",
-    "pts = [pt]\n",
-    "epochs = 1200 # How long to train for?\n",
-    "myeta = 0.01 # Careful with the learning rate: if it's too big, you can run into a \"bad point!\"\n",
-    "for i in range(epochs):\n",
-    "    pt = gradUpdate1(pt,Xtest,ytest,myeta)\n",
-    "    pts.extend([pt]) # Track the path in the original coordinates.\n",
-    "\"\"\"\n",
     "pts = SGD(Xtest, ytest, [2,0], gradUpdate1, 1200)\n",
-    "opts = [np.array([np.exp(p[0])+1,p[1]]) for p in pts]"
+    "opts = [np.array([np.exp(p[0])+1,p[1]]) for p in pts]\n"
    ]
   },
   {
@@ -271,7 +264,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = df = pd.read_csv('data/avocado.csv')"
+    "x = df[['Total Volume']]\n",
+    "y = df[['AveragePrice']]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.1)\n",
+    "\n",
+    "xarray = np.array(X_train)\n",
+    "yarray = np.array(y_train)\n",
+    "xTestArray = np.array(X_test)\n",
+    "\n",
+    "pts = SGD(xarray, yarray, [0,1], gradUpdate1, 1000, lr=0.000000000000000001)\n",
+    "opts = [np.array([np.exp(p[0])+1,p[1]]) for p in pts]\n",
+    "losses = [MSELoss(p,Xtest,ytest) for p in opts]\n",
+    "results = opts[-1]\n",
+    "m = results[0][0]\n",
+    "b = results[1][0]\n",
+    "print(f\"m: {m}\")\n",
+    "print(f\"b: {b}\")\n",
+    "ypred = []\n",
+    "for x in xTestArray:\n",
+    "    ypred.append(m*x + b)\n",
+    "\n",
+    "lr = LinearRegression()\n",
+    "lr.fit(X_train, y_train)\n",
+    "pred = lr.predict(X_test)\n",
+    "plt.scatter(X_train, y_train, color='g')\n",
+    "plt.plot(xTestArray, ypred, label=\"Constrained Regression Line\")\n",
+    "plt.plot(X_test, pred, label=\"Normal Regression Line\", color='k')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
@@ -281,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2"
+    "\n"
    ]
   },
   {
@@ -309,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
