--- a/MoreThanOne.ipynb
+++ b/MoreThanOne.ipynb
@@ -254,7 +254,7 @@
     "plt.xlabel(\"Volume Sold\")\n",
     "plt.ylabel(\"Average Price\")\n",
     "plt.title(\"Avocados Sold vs Price\")\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -267,13 +267,13 @@
     "x = df[['Total Volume']]\n",
     "y = df[['AveragePrice']]\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.1)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.2)\n",
     "\n",
     "xarray = np.array(X_train)\n",
     "yarray = np.array(y_train)\n",
     "xTestArray = np.array(X_test)\n",
     "\n",
-    "pts = SGD(xarray, yarray, [0,1], gradUpdate1, 1000, lr=0.000000000000000001)\n",
+    "pts = SGD(xarray, yarray, [0,1], gradUpdate1, 1000, lr=0.000000000000001)\n",
     "opts = [np.array([np.exp(p[0])+1,p[1]]) for p in pts]\n",
     "losses = [MSELoss(p,Xtest,ytest) for p in opts]\n",
     "results = opts[-1]\n",
@@ -281,19 +281,28 @@
     "b = results[1][0]\n",
     "print(f\"m: {m}\")\n",
     "print(f\"b: {b}\")\n",
-    "ypred = []\n",
+    "constrainedPred = []\n",
     "for x in xTestArray:\n",
-    "    ypred.append(m*x + b)\n",
+    "    constrainedPred.append(m*x + b)\n",
     "\n",
     "lr = LinearRegression()\n",
     "lr.fit(X_train, y_train)\n",
     "pred = lr.predict(X_test)\n",
     "plt.scatter(X_train, y_train, color='g')\n",
-    "plt.plot(xTestArray, ypred, label=\"Constrained Regression Line\")\n",
-    "plt.plot(X_test, pred, label=\"Normal Regression Line\", color='k')\n",
-    "plt.legend()\n",
+    "plt.plot(X_test, pred, color='k')\n",
+    "plt.xlabel(\"Avacados Sold\")\n",
+    "plt.ylabel(\"Average Price per Avacado\")\n",
+    "plt.title(\"Normal Regression\")\n",
+    "plt.savefig(\"normalAvacados.png\")\n",
     "plt.show()\n",
-    "\n"
+    "\n",
+    "plt.scatter(X_train, y_train, color='g')\n",
+    "plt.plot(xTestArray, constrainedPred, color='k')\n",
+    "plt.xlabel(\"Avacados Sold\")\n",
+    "plt.ylabel(\"Average Price per Avacado\")\n",
+    "plt.title(\"Constrained Regression\")\n",
+    "plt.savefig(\"constrainedAvacados.png\")\n",
+    "plt.show()\n"
    ]
   },
   {
