Added dummy plot

--- a/Phillips_Curve.ipynb
+++ b/Phillips_Curve.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a468494e",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,23 @@
    "outputs": [],
    "source": [
     "# Bottom line: here is our approximate solution:\n",
-    "print(opts[-1])"
+    "results = opts[-1]\n",
+    "\n",
+    "a = results[0]\n",
+    "b = results[1]\n",
+    "c = results[2]\n",
+    "\n",
+    "print(f\"a: {a}\")\n",
+    "print(f\"b: {b}\")\n",
+    "print(f\"c: {c}\")\n",
+    "\n",
+    "constrainedY = []\n",
+    "for x in myX:\n",
+    "    constrainedY.append((a/math.sqrt(x) + b/(x**2) + c))\n",
+    "\n",
+    "plt.plot(myX,constrainedY)\n",
+    "plt.savefig(\"dummyPhillips.png\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -278,327 +294,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ec30f9e2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>country</th>\n",
-       "      <th>year</th>\n",
-       "      <th>Inflation, consumer prices (annual %)</th>\n",
-       "      <th>Inflation, GDP deflator (annual %)</th>\n",
-       "      <th>Real interest rate (%)</th>\n",
-       "      <th>Deposit interest rate (%)</th>\n",
-       "      <th>Lending interest rate (%)</th>\n",
-       "      <th>Unemployment, total (% of total labor force) (national estimate)</th>\n",
-       "      <th>Unemployment, total (% of total labor force) (modeled ILO estimate)</th>\n",
-       "      <th>iso3c</th>\n",
-       "      <th>iso2c</th>\n",
-       "      <th>adminregion</th>\n",
-       "      <th>incomeLevel</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>226.005421</td>\n",
-       "      <td>232.984659</td>\n",
-       "      <td>-63.787120</td>\n",
-       "      <td>18.500000</td>\n",
-       "      <td>20.583333</td>\n",
-       "      <td>26.500000</td>\n",
-       "      <td>30.014999</td>\n",
-       "      <td>ALB</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Europe &amp; Central Asia (excluding high income)</td>\n",
-       "      <td>Upper middle income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>1993</td>\n",
-       "      <td>85.004751</td>\n",
-       "      <td>125.650814</td>\n",
-       "      <td>-42.573514</td>\n",
-       "      <td>27.333333</td>\n",
-       "      <td>29.583333</td>\n",
-       "      <td>22.299999</td>\n",
-       "      <td>25.257999</td>\n",
-       "      <td>ALB</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Europe &amp; Central Asia (excluding high income)</td>\n",
-       "      <td>Upper middle income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>1994</td>\n",
-       "      <td>22.565053</td>\n",
-       "      <td>35.842475</td>\n",
-       "      <td>-8.963182</td>\n",
-       "      <td>19.833333</td>\n",
-       "      <td>23.666667</td>\n",
-       "      <td>18.400000</td>\n",
-       "      <td>20.840000</td>\n",
-       "      <td>ALB</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Europe &amp; Central Asia (excluding high income)</td>\n",
-       "      <td>Upper middle income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>7.793219</td>\n",
-       "      <td>9.970663</td>\n",
-       "      <td>8.801745</td>\n",
-       "      <td>15.300000</td>\n",
-       "      <td>19.650000</td>\n",
-       "      <td>12.900000</td>\n",
-       "      <td>14.611000</td>\n",
-       "      <td>ALB</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Europe &amp; Central Asia (excluding high income)</td>\n",
-       "      <td>Upper middle income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>1996</td>\n",
-       "      <td>12.725478</td>\n",
-       "      <td>38.172058</td>\n",
-       "      <td>-10.286975</td>\n",
-       "      <td>16.783333</td>\n",
-       "      <td>23.958333</td>\n",
-       "      <td>12.300000</td>\n",
-       "      <td>13.931000</td>\n",
-       "      <td>ALB</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Europe &amp; Central Asia (excluding high income)</td>\n",
-       "      <td>Upper middle income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1261</th>\n",
-       "      <td>Zambia</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>6.575900</td>\n",
-       "      <td>6.992016</td>\n",
-       "      <td>4.821684</td>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>12.150833</td>\n",
-       "      <td>7.850000</td>\n",
-       "      <td>7.850000</td>\n",
-       "      <td>ZMB</td>\n",
-       "      <td>ZM</td>\n",
-       "      <td>Sub-Saharan Africa (excluding high income)</td>\n",
-       "      <td>Lower middle income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1262</th>\n",
-       "      <td>Zambia</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>6.577312</td>\n",
-       "      <td>10.095730</td>\n",
-       "      <td>2.070262</td>\n",
-       "      <td>8.887500</td>\n",
-       "      <td>12.375000</td>\n",
-       "      <td>12.170000</td>\n",
-       "      <td>11.630000</td>\n",
-       "      <td>ZMB</td>\n",
-       "      <td>ZM</td>\n",
-       "      <td>Sub-Saharan Africa (excluding high income)</td>\n",
-       "      <td>Lower middle income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1263</th>\n",
-       "      <td>Zambia</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>7.494572</td>\n",
-       "      <td>7.411571</td>\n",
-       "      <td>2.215865</td>\n",
-       "      <td>6.800000</td>\n",
-       "      <td>9.791667</td>\n",
-       "      <td>12.010000</td>\n",
-       "      <td>12.010000</td>\n",
-       "      <td>ZMB</td>\n",
-       "      <td>ZM</td>\n",
-       "      <td>Sub-Saharan Africa (excluding high income)</td>\n",
-       "      <td>Lower middle income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1264</th>\n",
-       "      <td>Zambia</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>9.150316</td>\n",
-       "      <td>7.633470</td>\n",
-       "      <td>2.469674</td>\n",
-       "      <td>8.285833</td>\n",
-       "      <td>10.291667</td>\n",
-       "      <td>12.520000</td>\n",
-       "      <td>12.520000</td>\n",
-       "      <td>ZMB</td>\n",
-       "      <td>ZM</td>\n",
-       "      <td>Sub-Saharan Africa (excluding high income)</td>\n",
-       "      <td>Lower middle income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1265</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>255.304991</td>\n",
-       "      <td>440.829791</td>\n",
-       "      <td>-78.517887</td>\n",
-       "      <td>2.975000</td>\n",
-       "      <td>16.181667</td>\n",
-       "      <td>16.860001</td>\n",
-       "      <td>4.833000</td>\n",
-       "      <td>ZWE</td>\n",
-       "      <td>ZW</td>\n",
-       "      <td>Sub-Saharan Africa (excluding high income)</td>\n",
-       "      <td>Lower middle income</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1266 rows × 13 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       country  year  Inflation, consumer prices (annual %)  \\\n",
-       "0      Albania  1992                             226.005421   \n",
-       "1      Albania  1993                              85.004751   \n",
-       "2      Albania  1994                              22.565053   \n",
-       "3      Albania  1995                               7.793219   \n",
-       "4      Albania  1996                              12.725478   \n",
-       "...        ...   ...                                    ...   \n",
-       "1261    Zambia  2012                               6.575900   \n",
-       "1262    Zambia  2017                               6.577312   \n",
-       "1263    Zambia  2018                               7.494572   \n",
-       "1264    Zambia  2019                               9.150316   \n",
-       "1265  Zimbabwe  2019                             255.304991   \n",
-       "\n",
-       "      Inflation, GDP deflator (annual %)  Real interest rate (%)  \\\n",
-       "0                             232.984659              -63.787120   \n",
-       "1                             125.650814              -42.573514   \n",
-       "2                              35.842475               -8.963182   \n",
-       "3                               9.970663                8.801745   \n",
-       "4                              38.172058              -10.286975   \n",
-       "...                                  ...                     ...   \n",
-       "1261                            6.992016                4.821684   \n",
-       "1262                           10.095730                2.070262   \n",
-       "1263                            7.411571                2.215865   \n",
-       "1264                            7.633470                2.469674   \n",
-       "1265                          440.829791              -78.517887   \n",
-       "\n",
-       "      Deposit interest rate (%)  Lending interest rate (%)  \\\n",
-       "0                     18.500000                  20.583333   \n",
-       "1                     27.333333                  29.583333   \n",
-       "2                     19.833333                  23.666667   \n",
-       "3                     15.300000                  19.650000   \n",
-       "4                     16.783333                  23.958333   \n",
-       "...                         ...                        ...   \n",
-       "1261                   7.000000                  12.150833   \n",
-       "1262                   8.887500                  12.375000   \n",
-       "1263                   6.800000                   9.791667   \n",
-       "1264                   8.285833                  10.291667   \n",
-       "1265                   2.975000                  16.181667   \n",
-       "\n",
-       "      Unemployment, total (% of total labor force) (national estimate)  \\\n",
-       "0                                             26.500000                  \n",
-       "1                                             22.299999                  \n",
-       "2                                             18.400000                  \n",
-       "3                                             12.900000                  \n",
-       "4                                             12.300000                  \n",
-       "...                                                 ...                  \n",
-       "1261                                           7.850000                  \n",
-       "1262                                          12.170000                  \n",
-       "1263                                          12.010000                  \n",
-       "1264                                          12.520000                  \n",
-       "1265                                          16.860001                  \n",
-       "\n",
-       "      Unemployment, total (% of total labor force) (modeled ILO estimate)  \\\n",
-       "0                                             30.014999                     \n",
-       "1                                             25.257999                     \n",
-       "2                                             20.840000                     \n",
-       "3                                             14.611000                     \n",
-       "4                                             13.931000                     \n",
-       "...                                                 ...                     \n",
-       "1261                                           7.850000                     \n",
-       "1262                                          11.630000                     \n",
-       "1263                                          12.010000                     \n",
-       "1264                                          12.520000                     \n",
-       "1265                                           4.833000                     \n",
-       "\n",
-       "     iso3c iso2c                                    adminregion  \\\n",
-       "0      ALB    AL  Europe & Central Asia (excluding high income)   \n",
-       "1      ALB    AL  Europe & Central Asia (excluding high income)   \n",
-       "2      ALB    AL  Europe & Central Asia (excluding high income)   \n",
-       "3      ALB    AL  Europe & Central Asia (excluding high income)   \n",
-       "4      ALB    AL  Europe & Central Asia (excluding high income)   \n",
-       "...    ...   ...                                            ...   \n",
-       "1261   ZMB    ZM     Sub-Saharan Africa (excluding high income)   \n",
-       "1262   ZMB    ZM     Sub-Saharan Africa (excluding high income)   \n",
-       "1263   ZMB    ZM     Sub-Saharan Africa (excluding high income)   \n",
-       "1264   ZMB    ZM     Sub-Saharan Africa (excluding high income)   \n",
-       "1265   ZWE    ZW     Sub-Saharan Africa (excluding high income)   \n",
-       "\n",
-       "              incomeLevel  \n",
-       "0     Upper middle income  \n",
-       "1     Upper middle income  \n",
-       "2     Upper middle income  \n",
-       "3     Upper middle income  \n",
-       "4     Upper middle income  \n",
-       "...                   ...  \n",
-       "1261  Lower middle income  \n",
-       "1262  Lower middle income  \n",
-       "1263  Lower middle income  \n",
-       "1264  Lower middle income  \n",
-       "1265  Lower middle income  \n",
-       "\n",
-       "[1266 rows x 13 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "philips=pd.read_csv('inflation interest unemployment.csv')\n",
     "philips.dropna(inplace=True)\n",
@@ -631,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
